--- a/static/pages/workspace.html
+++ b/static/pages/workspace.html
@@ -169,7 +169,8 @@
                                 <li>The context of the measurements is crucial, e.g. image of the testing element,
                                     weather of the day, settings, etc.</li>
                                 <li>Remote collaborations can improve the working efficiency.</li>
-                                <li>Auto-grouping of data is a very welcoming add-on.</li>
+                                <li>Auto-grouping of data in various ways (by time, by location) would be a way to help
+                                    users to organize their measurements and improve productivity.</li>
                             </ul>
                         </div>
                     </div>
@@ -195,7 +196,8 @@
                         </p>
                         <img src="../img/workspace/competitor_analysis.png" />
                         <h5>Sketches</h5>
-                        <p>Some lo-fi wireframes were used for demonstrating ideas and gathering feedback. </p>
+                        <p>Some lo-fi wireframes were used for demonstrating ideas and gathering feedback from
+                            skateholders and development team. </p>
                         <img src="../img/workspace/ideation.png" />
                     </div>
                 </div>
@@ -207,8 +209,8 @@
                     <div class="col-lg-4">
                         <h3 class="display-text">Design</h3>
                         <p>
-                            With the feedback we got from the team, I went through a few rounds of design iteration. And
-                            finally confirmed the design.
+                            With the feedback we got from the team, I iterated the design, and get it to a stage where
+                            we are ready to show it to the users.
                         </p>
 
                     </div>
@@ -222,8 +224,8 @@
                         <h5>Design System</h5>
                         <p>
                             As we were aiming to build a platform and allow different products to provide services for
-                            their users. Having a design system that guides designers of different product to come up
-                            with designs that give a consistent look and feel as the Workspace is crucial. Hence a bit
+                            their users. Having a design system that guides designers of different products to come up
+                            with designs that give a consistent look and feel as the Workspace is crucial. Hence a big
                             part of the project was focusing on the Design System.
                         </p>
                         <img src="../img/workspace/design_system.png" />
@@ -241,18 +243,33 @@
                         <h5>Prototype & Usability Testing</h5>
                         <p>
                             Before move to the implementation, I decided to create an interactive prototype with Figma,
-                            conduct usability testings with a few users to spot potential usability issues. For
-                            usability testing, I conducted remote, moderated Think Aloud testing over Zoom. I tested
+                            conduct usability testings with a few users to spot potential usability issues.
+                        </p>
+                        <img src="../img/workspace/prototype.png" />
+                        <p class="m-3rem-t">
+                            For usability testing, I conducted remote, moderated Think Aloud testing over Zoom. I tested
                             around the key tasks I identified earlier in the process, asking the user to find a
                             particular measurement and its related information, asking the user to share and export the
                             measurement, asking the user to find probes and their contract information.
                         </p>
-                        <img src="../img/workspace/prototype.png" />
-                        <p>
+                        <img src="../img/workspace/tasks.png" />
+                        <p class="m-3rem-t">
                             Each task was followed by a SEQ rating. To understand the overall feeling, at the end of the
                             test, I added a SUS survey and had a short discussion with the tester.
                         </p>
-                        <p>I summarized my observation by a rainbow chart.</p>
+
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <h1>81.67</h1> Average SUS score
+                            </div>
+                            <div class="col-lg-6">
+                                <h1>5.83</h1> Average SEQ score of 6 tasks, the 6 tasks hover a average score from 4.67
+                                to 7
+                                (nominal midpoint of 4)
+                            </div>
+                        </div>
+
+                        <p class="m-3rem-t">I summarized my observation by a rainbow chart.</p>
                         <img src="../img/workspace/rainbow.png" />
                         <p>No major issues were found from the usability testing. But a few touch ups were made.</p>
                         <img src="../img/workspace/design_changes.png" />
