responsive design -> adaptive, update table_redesign image

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <h3 class="m-0rem-t m-1rem-b">Esplanade Website Redesign</h3>
                         <span class="badge esplanade-bg white-color">Information Architecture</span>
                         <span class="badge esplanade-bg white-color">UI Redesign</span>
-                        <span class="badge esplanade-bg white-color">Responsive Design</span>
+                        <span class="badge esplanade-bg white-color">Adaptive Design</span>
                         <p class="m-1rem-t">In this project, my team and I redesign the Information Architecture (IA)
                             and key pages layout of Esplanade. We proceeded with the project by following the design
                             thinking process.</p>
