add metrics to workspace

--- a/static/pages/workspace.html
+++ b/static/pages/workspace.html
@@ -316,9 +316,9 @@
                         <p>In the usability testing, we noticed all the testers tried to find the measurement file from
                             Recent Files instead of clicking the app tiles when we asked them to open a measurement
                             file. Also, when we asked about the App tiles, they weren't sure where it would lead them
-                            to. Thus, in the new design, I reused the side navbar from the data viewer screen so that
-                            users can learn how the product UI works faster. Also, the new position gives the app
-                            navigation more prominence.</p>
+                            to. Thus, in the new design, I tried to reduce the cognitive load by reusing the side navbar
+                            from the data viewer screen. Also, the new position gives the app navigation more prominence
+                            as when people browsing a site, they usually start from the top right.</p>
 
                         <img src="../img/workspace/home_redesign.png" />
 
@@ -350,6 +350,63 @@
                             part of the project was focusing on the Design System.
                         </p>
                         <img src="../img/workspace/design_system.png" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="workspace_data" class="hideme">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <h3 class="display-text">Measuring UX</h3>
+                        <p>Since workspace is a pretty large-scale project, we chose to use the HEART framework to
+                            measure the user experience.</p>
+
+                    </div>
+                    <div class="col-lg-8 m-4rem-t">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th scope="col"></th>
+                                    <th scope="col">Goal</th>
+                                    <th scope="col">Signals</th>
+                                    <th scope="col">Metrics</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">Happiness</th>
+                                    <td>Users find the site helpful and easy to use</td>
+                                    <td>Responding to surveys</td>
+                                    <td>Net Promoter Score</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Engagement</th>
+                                    <td>Users keep discovering new content/features</td>
+                                    <td>Spending more time on the site, <br>Viewing content not related to measurement
+                                        data</td>
+                                    <td>Average session length,<br># of page view of non-measurement screens</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Adoption</th>
+                                    <td>Users see the value of the site</td>
+                                    <td>Signing up for an account</td>
+                                    <td>Registeration rate</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Retention</th>
+                                    <td>Users keep coming back to the site to complete a key action</td>
+                                    <td>Staying active in the site</td>
+                                    <td>Daily active users</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Task Success</th>
+                                    <td>Users complete their goals quickly and easily</td>
+                                    <td>Completing the task without error, </td>
+                                    <td># of error event, <br> Time to share/export </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
