update workspace and cv

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                     <div class="col-lg-6 offset-lg-1">
                         <small>Released Project</small>
                         <h3 class="m-0rem-t m-1rem-b">Workspace</h3>
-                        <span class="badge workspace-bg white-color">User Research</span>
-                        <span class="badge workspace-bg white-color">Web Design</span>
-                        <span class="badge workspace-bg white-color">Design System</span>
+                        <span class="badge workspace-bg">User Research</span>
+                        <span class="badge workspace-bg">Web Design</span>
+                        <span class="badge workspace-bg">Design System</span>
                         <p class="m-1rem-t">Workspace is a web-based service where users can view, manage & analyze the
                             measurement data. As a UX design, I worked closely with the PM to shape the project
                             direction, ideate solutions and create user-centric design.</p>
