update workspace ds text

--- a/static/pages/workspace.html
+++ b/static/pages/workspace.html
@@ -300,6 +300,7 @@
                             <li>Difficult to access the contextual info when viewing data on a PC</li>
                             <li>Difficult to look for data</li>
                             <li>No access control</li>
+                            <li>No integration with post-processing tools</li>
                         </ol>
                     </div>
                 </div>
@@ -437,13 +438,15 @@
                         <h3 class="display-text">Delivery</h3>
                         <h5>Design System</h5>
                         <p>
-                            Workspace is aimed to become a platform that allows users of different products to manage
-                            and analyze their measurement data. Together with another UI designer, I created a design
-                            system to onboard the design of upcoming products and give users a consistent experience.
+                            Workspace is aimed to become a platform that streamlines users' data processing flow from
+                            managing data to post-processing. This would require Workspace to onboard more cloud-based
+                            services. Together with another UI designer, I created a design system to guide the design
+                            of upcoming products and give users a consistent experience.
                         </p>
                         <p>The design system contains not only essential visual elements, like color, typography, and
                             icons but also components and best practices guidelines.</p>
                         <img src="../img/workspace/design_system.png" />
+
                     </div>
                 </div>
             </div>
