--- a/index.html
+++ b/index.html
@@ -185,6 +185,63 @@
                 </div>
             </div>
         </section>
+        <section id="projects_zalora_app">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5">
+                        <div class="project-img">
+                            <a class="project-img-depth" href="static/pages/zalora-app.html">
+                                <img src="static/img/zalora-app/cover_1.png" alt="bg">
+                                <img src="static/img/zalora-app/cover_2.png" alt="product image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 offset-lg-1">
+                        <small>Released Project</small>
+                        <h3 class="m-0rem-t m-1rem-b">Bottom Navigation</h3>
+                        <span class="badge esplanade-bg white-color">Mobile Design</span>
+                        <span class="badge esplanade-bg white-color">AB Test</span>
+                        <p class="m-1rem-t">In this project, I redesigned the navigation of the zalora app and validated
+                            the design via AB testing.</p>
+                        <a class="read-more-link esplanade-color" href="static/pages/zalora-app.html">
+                            Read More
+                            <svg class="icon">
+                                <use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="projects_zalora">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5 offset-lg-1 order-lg-last">
+                        <div class="project-img">
+                            <a class="project-img-depth" href="static/pages/zalora.html">
+                                <img src="static/img/zalora/cover_1.png" alt="bg">
+                                <img src="static/img/zalora/cover_2.png" alt="product image">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 ">
+                        <small>Released Design System</small>
+                        <h3 class="m-0rem-t m-1rem-b">Style</h3>
+                        <span class="badge zalora-bg white-color">UX Patterns</span>
+                        <span class="badge zalora-bg white-color">ReactJs</span>
+                        <span class="badge zalora-bg white-color">CSS</span>
+                        <p class="m-1rem-t">Style is a design system that defines the interaction standards, design
+                            patterns, and guidelines for all digital channels in ZALORA.</p>
+                        <a class="read-more-link zalora-color" href="static/pages/zalora.html">
+                            Read More
+                            <svg class="icon">
+                                <use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="projects_esplanade">
             <div class="container">
                 <div class="row">
@@ -215,39 +272,10 @@
                 </div>
             </div>
         </section>
-        <section id="projects_zalora">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-5 offset-lg-1 order-lg-last">
-                        <div class="project-img">
-                            <a class="project-img-depth" href="static/pages/zalora.html">
-                                <img src="static/img/zalora/cover_1.png" alt="bg">
-                                <img src="static/img/zalora/cover_2.png" alt="product image">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <small>Released Design System</small>
-                        <h3 class="m-0rem-t m-1rem-b">Style</h3>
-                        <span class="badge zalora-bg white-color">UX Patterns</span>
-                        <span class="badge zalora-bg white-color">ReactJs</span>
-                        <span class="badge zalora-bg white-color">CSS</span>
-                        <p class="m-1rem-t">Style is a design system that defines the interaction standards, design
-                            patterns, and guidelines for all digital channels in ZALORA.</p>
-                        <a class="read-more-link zalora-color" href="static/pages/zalora.html">
-                            Read More
-                            <svg class="icon">
-                                <use xlink:href="static/pages/symbol-defs.svg#icon-arrow-right"></use>
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
         <section id="projects_huemail">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 offset-lg-1 order-lg-last">
                         <div class="project-img">
                             <a class="project-img-depth" href="static/pages/wap.html">
                                 <img src="static/img/huemail/cover_1.png" alt="bg">
@@ -255,7 +283,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-6 offset-lg-1">
+                    <div class="col-lg-6">
                         <small>Released Enterprise Web Application</small>
                         <h3 class="m-0rem-t m-1rem-b">Security Features</h3>
                         <span class="badge huemail-bg white-color">Enterprise System</span>
@@ -278,7 +306,7 @@
         <section id="projects_autodesk">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5 offset-lg-1 order-lg-last">
+                    <div class="col-lg-5">
                         <div class="project-img">
                             <a class="project-img-depth" href="static/pages/autodesk.html">
                                 <img src="static/img/autodesk/cover_1.png" alt="bg">
@@ -286,7 +314,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-6 ">
+                    <div class="col-lg-6 offset-lg-1">
                         <small>Released Desktop Application</small>
                         <h3 class="m-0rem-t m-1rem-b">WingMan </h3>
                         <span class="badge autodesk-bg">Interaction Design</span>
