update openop UI and add workspace ds link

--- a/static/pages/workspace.html
+++ b/static/pages/workspace.html
@@ -444,7 +444,10 @@
                             of upcoming products and give users a consistent experience.
                         </p>
                         <p>The design system contains not only essential visual elements, like color, typography, and
-                            icons but also components and best practices guidelines.</p>
+                            icons but also components and best practices guidelines. Find our guidelines <a
+                                href="https://www.figma.com/proto/J3RpuHnzh1zotph6JbhjQN/Dark-theme?page-id=4030%3A20298&node-id=4769%3A49599&viewport=6758%2C1192%2C0.34&scaling=min-zoom&starting-point-node-id=4235%3A33144"
+                                target="_blank">here</a>.
+                        </p>
                         <img src="../img/workspace/design_system.png" />
 
                     </div>
